--- a/styles/result.css
+++ b/styles/result.css
@@ -9,9 +9,7 @@ body{
     height: 100vh;
     width: 100vw;
     padding: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     color: white;
 
 
@@ -94,3 +92,87 @@ body{
     gap: 25px;
     margin: 20px;
 }
+/* Footer Styling */
+.footer {
+  background: #0d0d0d;
+  color: #fff;
+  padding: 50px 20px 20px;
+  font-family: "Poppins", sans-serif;
+  margin-top: 100px;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 30px;
+}
+
+.footer-logo {
+  width: 100px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+  transition: .3s;
+  box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.56);
+}
+.footer-logo:hover{
+  transform: scale(1.1) rotate(10deg);
+}
+
+.footer-section h3 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #f5c518; /* Golden highlight */
+}
+
+.footer-section p {
+  color: #ccc;
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin: 8px 0;
+}
+
+.footer-section ul li a {
+  text-decoration: none;
+  color: #ccc;
+  transition:.3s;
+  
+}
+
+.footer-section ul li a:hover {
+  color: #f5c518;
+  padding-left: 10px;
+}
+
+/* Social Icons */
+.footer-section.social a {
+  font-size: 20px;
+  margin-right: 15px;
+  color: #ccc;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.footer-section.social a:hover {
+  color: #f5c518;
+  transform: scale(1.2);
+}
+
+/* Footer Bottom */
+.footer-bottom {
+  text-align: center;
+  margin-top: 30px;
+  border-top: 1px solid #333;
+  padding-top: 15px;
+  font-size: 14px;
+  color: #aaa;
+}
+
