--- a/styles/result.css
+++ b/styles/result.css
@@ -4,12 +4,13 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 
+
 }
 body{
     height: 100vh;
     width: 100vw;
     padding: 30px;
-    
+    overflow-x: hidden;
     color: white;
 
 
